<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_discover"
        android:icon="@drawable/ic_home"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/navigation_reconnect"
        android:icon="@drawable/ic_connect"
        android:title="@string/title_reconnect" />

    <item
        android:id="@+id/navigation_bookings"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/title_bookings" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_messages"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_blogs"
        android:icon="@drawable/ic_blogs"
        android:title="@string/title_blogs" />

</menu>