<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

   <!-- <ru.rambler.libs.swipe_layout.SwipeLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:left_swipe_enabled="true"
        app:right_swipe_enabled="false">-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/swipe_content"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/rounded_corner"
                android:baselineAligned="false"
                android:clickable="true"
                android:descendantFocusability="blocksDescendants"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.5" />

                <ImageView
                    android:id="@+id/booking_level"
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:contentDescription="@string/booking_level"
                    android:src="@drawable/ic_circle_green"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/skill_name"
                    android:layout_width="326dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/skill_name_default"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toRightOf="@id/booking_level"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal"/>

                <ImageView
                    android:id="@+id/alarm_view"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/ic_alarm"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/guideline_horizontal"
                    tools:visibility="visible"
                    android:contentDescription="@string/alarm" />

                <TextView
                    android:id="@+id/skill_end_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/skill_end_time"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintRight_toLeftOf="@id/alarm_view"
                    app:layout_constraintBottom_toBottomOf="@id/alarm_view" />

                <TextView
                    android:id="@+id/skill_time_separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:text="@string/skill_time_separator"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintRight_toLeftOf="@id/skill_end_time"
                    app:layout_constraintBottom_toBottomOf="@id/skill_end_time" />

                <TextView
                    android:id="@+id/skill_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:text="@string/skill_start_time"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintRight_toLeftOf="@id/skill_time_separator"
                    app:layout_constraintBottom_toBottomOf="@id/skill_time_separator" />
            </androidx.constraintlayout.widget.ConstraintLayout>

     <!--       &lt;!&ndash;RIGHT&ndash;&gt;
            <LinearLayout
                android:id="@+id/bottom_wrapper"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:background="@color/red"
                android:divider="@color/white"
                android:dividerPadding="@dimen/list_item_divider_padding"
                android:orientation="vertical"
                android:showDividers="middle"
                app:bring_to_clamp="@dimen/swipe_clamp"
                app:clamp="self"
                app:gravity="right"
                app:sticky="@dimen/margin_100">

                <ImageView
                    android:id="@+id/swipe_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_heart_shape"
                    android:gravity="center|start"
                    android:contentDescription="@string/swipe_icon" />

                <TextView
                    android:id="@+id/swipe_tv_message"
                    style="@style/SwipeItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center|start"
                    android:paddingStart="@dimen/layout_20"
                    android:paddingEnd="0dp"
                    android:text="@string/add_to_favorite" />
            </LinearLayout>
    </ru.rambler.libs.swipe_layout.SwipeLayout>-->
</layout>